# pygame_xml_gui

./: .gitignore  CHANGELOG.md  README.md  TODO  VERSION_PLAN.md  iceberglist.md  launch_me.code-workspace  output.py  pyproject.toml  pyxg_validate_xml.py  pyxg_xml_to_mockup.py  run_and_launch.py  someFile.txt  validator.py
classes/: guiMaker.py  regexReplacement.py  sizeInserter.py  sourceInserter.py  styleInserter.py  validator.py  validator_class.py  widget.py  widgetCreator.py  widgetPrinter.py  xmlAttributeValidator.py  xmlHandler.py
contract/: contract.md  contract.mhtml
files/: data.py  dp_xml.xml  output.py  paths.py  test_xml.xml  xml_schema.xsd
files/pyStyle/: dark.json  light.json
guides/: classes.md
main/pygame_xml_gui/: __init__.py  mockup_result_class.py  mockup_result_class_exe.py
main/pygame_xml_gui/src/: SOMEFILE.txt  UserInterface.py  UserInterfaceConstructor.py  pyxg_validate_xml.py  pyxg_xml_to_class.py  pyxg_xml_to_mockup.py  pyxg_xml_to_mockup_live.py
main/pygame_xml_gui/src/classes/: check.py  classWriter.py  errorHandler.py  guiMaker.py  sizeInserter.py  sourceInserter.py  sourceReader.py  styleImporter.py  styleInserter.py  validator.py  widget.py  widgetPrinter.py  xmlHandler.py  xmlHelper.py
main/pygame_xml_gui/src/files/: paths.py  xml_schema.xsd
main/pygame_xml_gui/test/: test.xml  test_dp.xml  test_entry.py  test_entry.xml  test_juh_dp.py  test_points.py  test_points.xml  test_xml_gui.py
test/: test1.py  test2.py  test3.py
validator_dir/: cprint.py  validator_class.py  validator_run.py  xml_schema.xsd
(+20 files in other folders)
