[tool.poetry]
name = "pygame-xml-gui"
version = "0.1.0"
description = ""
authors = ["Golfmensch99 <marcel.menzel09@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pygame_xml_gui", from = "main" }]
repository = "https://github.com/Golfmensch99/pygame_xml_gui.git"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
pygame-engine = {path = "../Pygame_Engine"}
rich = "^13.5.3"
xmlschema = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
